	- internal: Use C++11 if available: delete copy constructors, override
	- internal: Use constexpr for const arrays; gcc might otherwise produce
	  unexpected copies: https://forums.gentoo.org/viewtopic-t-1057674.html
	- internal: Finally implement ExplodeAtom in a sane manner
	- internal: Use array class if available (might require C++11)

*eix-0.32.4
	Martin Väth <martin at mvath.de>:
	- Fix --disable-swap-remote (which falsely was equivalent to
	  --enable-swap-remote; only omitting the argument could switch it off)
	  Be aware of the following simultaneous change.
	- Interchange the two remote paths (i.e. invert in a sense the meaning
	  --{en,dis}able-swap-remote or of not specifying it, respectively):
	  http://dev.gentooexperimental.org is dead since quite a while;
	  so it makes sense to choose it only as the alternative update2/fetch2
	  by default. To revert to the previous defaults, use
	  --enable-swap-remote (or omit now using --{en,dis}able-swap remote,
	  respectively; note that --disable-swap-remote was faulty, see above).
	- Introduce EIX_TMPDIR to allow overriding of TMPDIR, see
	  https://bugs.gentoo.org/show_bug.cgi?id=600648

	Wim Muskee:
	- Manpage typo fix

*eix-0.32.3
	Martin Väth <martin at mvath.de>:
	- Explain on manpage how to retain functionality of previous USE-flags
	  which were removed from the ebuild for political reasons
	- In particular, explain how to install with CXXFLAGS/LDFLAGS which are
	  recommended by the eix maintainer for optimization and security
	- Modify instructions in segfault message to match USE-flags crippling
	- --enable-new-dialact only in case of optimizations

*eix-0.32.2
	Martin Väth <martin at mvath.de>:
	- Make eix-functions.sh a program to be used with "eval"

*eix-0.32.1
	Martin Väth <martin at mvath.de>:
	- eix-remote: Use https://github.com/vaeth/quoter/ instead of hacks
	- contrib: reintroduce contrib/mkrelease.sh as a wrapper to git-tag

*eix-0.32.0
	Martin Väth <martin at mvath.de>: